# PS

./: CMakeCache.txt  CMakeLists.txt  PSMin  README.md  Readme.txt  clang-format.txt  clean.sh  cmake_install.cmake  data_J_10000.root  doxygenConfig
Analisi risultati PS/: PS_20_1000_2_2_0.01.root  PS_20_1000_2_2_0.1.root  PS_20_1000_4_4_0.1.root  PS_20_5000_2_2_0.05.root  PS_20_5000_2_2_0.05_1.root  PS_20_5000_2_2_0.05_EXC5.root  PS_20_5000_2_2_0.05_EXC589.root  PS_50_1000_2_2_0.1.root  main.c  readme
doc/html/: _parameters_domain_8h_source.html  _particle_8h_source.html  _population_8h_source.html  class_config.html  class_evaluate.html  class_parameter.html  class_parameters_domain.html  class_particle.html  class_population.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html
doc/html/search/: all_6.js  all_8.js  functions_5.js  functions_7.js  searchdata.js
include/: Config.h  Evaluate.h  Move.h  ParametersDomain.h  Particle.h  Population.h  UpBest.h  UpVel.h
src/: PSMin.cc  ParametersDomain.cc  Particle.cc  Population.cc
